--- a/src/css/animations.css
+++ b/src/css/animations.css
@@ -28,9 +28,9 @@
   
 .scroll a {
     display: inline-block;
-    font-size: 1.2rem;
+    font-size: 3vh;
     color: var(--font);
-    margin-left: 20px;
+    margin-left: 1vw;
     text-shadow: 5px 3px 10px black;
 }
 
