--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,7 +21,7 @@ header img {
 .home {
     display: flex;
     justify-content: center;
-    max-height: 80vh;
+    height: 80vh;
     /* padding: 50px; */
 }
 
@@ -39,61 +39,80 @@ header img {
 .home .right {
     display: flex;
     flex-direction: column;
-    max-width: 40vw;
-    padding: 20px;
+    max-width: 60vh;
+    height: 70vh;
+    padding: 1vh;
     /* justify-content: center; */
 }
 
 .home .right h1 {
-    font-size: 2.5rem;
+    font-size: 5vh;
     text-align: center;
     /* margin-bottom: 50px; */
 }
 
 .home .right h2 {
-    font-size: 1.3rem;
-    margin: 50px 10px;
+    font-size: 3vh;
+    margin: 2vh;
     max-width: 100%;
 }
 
 .home .button {
-    font-size: 2rem;
+    font-size: 5vh;
     background-color: mediumpurple;
-    padding: 10px;
+    padding: 1vh;
     border-radius: 30px;
     border: 0;
     cursor: pointer;
     font-weight: bold;
+    width: 80%;
+    margin: auto;
 }
 
 .home .right p {
     margin: 5px;
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 3vh;
 }
 
 .about {
     background-color: white;
-    margin-top: -185px;
+    margin-top: -20vh;
     height: 50vw;
-    padding-top: 170px;
+    padding-top: 20vh;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.about .scroll-container {
+    width: 50vw;
+    display: flex;
+}
+
+.about .spacing {
+    width: 50%;
+}
+
+.about .scroll {
+    width: 50%;
+    justify-content: left;
+    margin-left: 5vh;
+}
+
 .about .description {
-    width: 500px;
+    width: 50vw;
 }
 
 .about .description h1 {
-    font-size: 2.5rem;
+    font-size: 5vh;
     text-align: center;
     margin: 0 0 20px;
 }
 
 .about .description h2 {
-    font-size: 1.3rem;
+    font-size: 3vh;
     text-align: justify;
 }
+
 
