--- a/src/css/style.css
+++ b/src/css/style.css
@@ -78,7 +78,7 @@ header img {
 .about {
     background-color: white;
     margin-top: -20vh;
-    height: 50vw;
+    width: 100vw;
     padding-top: 20vh;
     display: flex;
     flex-direction: column;
@@ -100,8 +100,15 @@ header img {
     margin-left: 5vh;
 }
 
-.about .description {
-    width: 50vw;
+.about .section {
+    max-width: 70vw;
+    display: flex;
+    gap: 2vw;
+    margin-top: 2vh;
+}
+
+.about .left {
+    width: 50%;
 }
 
 .about .description h1 {
@@ -111,8 +118,20 @@ header img {
 }
 
 .about .description h2 {
-    font-size: 3vh;
+    font-size: 2.5vh;
     text-align: justify;
 }
 
+.about .right {
+    display: flex;
+    width: 40%;
+    align-items: center;
+}
+
+
+.about .right img {
+    width: 100%;
+    margin: auto;
+    border-radius: 20px;
+}
 
