--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,6 +1,10 @@
+:root {
+    --background: rgba(198, 96, 249, 0.543);
+}
+
 html {
     scroll-behavior: smooth;
-    font-size: 16px;
+    font-size: 2.5vh;
     overflow-x: hidden;
 }
 
@@ -12,4 +16,18 @@ body {
     animation: fadeInOpacity 2s ease-out;
     animation-fill-mode: backwards;
     animation-delay: .25s;
+    background-color: var(--background);
+}
+
+.bodyHeader {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.bodyHeader img {
+    margin: 10px;
+    height: fit-content;
+    border-radius: 100%;
+    height: 10vh;
 }
