--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -13,7 +13,14 @@
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 720px) {
+    .home .left img {
+        max-width: 60vw;
+        max-height: 60vh;
+    }
+}
+
+@media (max-width: 600px) {
     html {
         font-size: 3.2vw;
     }
@@ -56,8 +63,9 @@
     .btn-top {
         left: 50%;
         max-width: 100%;
-        margin-left: -25%;
+        margin-left: 0;
         margin-top: none;
+        transform: translateX(-50%)
     }
 
     .about {
@@ -69,6 +77,7 @@
         flex-direction: column;
         margin: 0;
         gap: 2vh;
+        margin-top: -5vh;
     }
 
     .about .right {
