--- a/src/css/style.css
+++ b/src/css/style.css
@@ -145,3 +145,28 @@
     font-size: 2rem;
     text-align: center;
 }
+
+.comments ul {
+    display: flex;
+    flex-direction: row;
+    max-width: 80vw;
+    margin: auto;
+    justify-content: center;
+    margin-top: 5vh;
+    gap: 5vw;
+}
+
+.comments ul li {
+    width: 20vw;
+    text-align: center;
+}
+
+.comments ul li img {
+    height: 20vh;
+    border-radius: 20px;
+}
+
+.comments ul li h1 {
+    font-size: 1.3rem;
+    color: orangered;
+}
