--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,5 +1,8 @@
 :root {
     --background: rgba(198, 96, 249, 0.543);
+    --background-gradient: linear-gradient(to top, rgba(198, 96, 249, 0.543), white);
+
+    
 }
 
 html {
@@ -16,7 +19,7 @@ body {
     animation: fadeInOpacity 2s ease-out;
     animation-fill-mode: backwards;
     animation-delay: .25s;
-    background-color: var(--background);
+    /* background-image: var(--background-gradient); */
 }
 
 /* section {
@@ -34,4 +37,44 @@ body {
     height: fit-content;
     border-radius: 100%;
     height: 10vh;
+}
+
+
+
+footer {
+    position: relative;
+    padding: 15px;
+    height: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 100vw;
+    gap: 40vw;
+}
+
+footer p {
+    font-size: 1rem;
+    margin: 10px;
+    text-align: right;
+}
+
+footer .links {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+footer img, .links img {
+    height: 50px;
+    width: 50px;
+    border: 100px;
+    transition: .2s;
+    filter: grayscale(50%);
+}
+
+footer .links img:hover, .links img:hover {
+    transform: scale(1.1);
+    filter: none;
 }
