--- a/src/css/global.css
+++ b/src/css/global.css
@@ -43,7 +43,36 @@ body {
     height: 10vh;
 }
 
+.button {
+    display: flex;
+    width: 80%;
+    justify-content: center;
+    height: 3rem;
+}
 
+.button button {
+    font-size: 2rem;
+    background-color: mediumpurple;
+    padding: 1vh;
+    border-radius: 30px;
+    border: 0;
+    cursor: pointer;
+    font-weight: bold;
+    /* margin: auto; */
+    /* transition: 1s; */
+    height: fit-content;
+}
+
+.btn-top {
+    display: block;
+    position: fixed;
+    left: 50%;
+    top: 0;
+    z-index: 10;
+    max-width: 30%;
+    margin-left: 2vh;
+    margin-top: 1vh;
+}
 
 footer {
     position: relative;
