--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -146,7 +146,9 @@
     }
     
     footer p {
+        font-size: 1.2rem;
         text-align: center;
+        margin: 2px;
     }
 
     footer .links {
