--- a/src/css/style.css
+++ b/src/css/style.css
@@ -142,6 +142,10 @@
     align-items: center;
 }
 
+.questions .separator {
+    display: flex;
+}
+
 .questions h1 {
     font-size: 2rem;
     text-align: center;
@@ -179,4 +183,9 @@
 .questions .more img:hover {
     transform: scale(1.1);
     filter: none;
+}
+
+.questions .button {
+    flex-direction: column;
+    margin: 8vh auto;
 }
