--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -61,7 +61,7 @@
     }
 
     #comments, #questions {
-        scroll-margin-top: -1vh;
+        scroll-margin-top: -0.5vh;
     }
     
 
@@ -138,7 +138,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        gap: 5vw;
+        gap: 2vw;
     }
 
     .comments ul li img {
@@ -149,7 +149,11 @@
         margin-top: -5vh;
     }
 
-    .questions .section {
+    .questions {
+        padding-bottom: 1vh;
+    }
+
+    .questions .sec {
         max-width: 80vw;
     }
 
@@ -157,8 +161,20 @@
         flex-direction: column;
     }
 
+    .questions .more {
+        margin-top: -2vh;
+    }
+    
+    .questions p {
+        margin-bottom: 2vh;
+    }
+
     .questions .more img {
-        height: 15vh;
+        height: 10vh;
+    }
+
+    .questions .button {
+        margin: 4vh;
     }
 
     footer {
